--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.2.14",
     "@covalent/core": "^2.1.1",
     "@covalent/echarts": "^2.1.0",
+    "angular-in-memory-web-api": "^0.9.0",
     "echarts": "^4.5.0",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
