--- a/angular.json
+++ b/angular.json
@@ -72,8 +72,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "front-end:build",
-            "proxyConfig": "proxy.conf.json"
+            "browserTarget": "front-end:build"
           },
           "configurations": {
             "production": {
