--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "echarts": "^4.5.0",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
