--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@covalent/core": "^2.1.1",
     "@covalent/echarts": "^2.1.0",
     "angular-in-memory-web-api": "^0.9.0",
+    "chart.js": "^2.9.3",
     "echarts": "^4.5.0",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "ng2-charts": "^2.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
